--- a/public/index.html
+++ b/public/index.html
@@ -27,30 +27,29 @@
 	    right: 0;
 	    background: rgb(183, 213, 179);
 	    font-size: 14px;
-	    text-align: center;
+	    text-align: end;
 		}
 		label{
 			font-size: 16px;
-			font-weight: bold;
     	color: #575757;
 		}
 		form {
 			overflow: scroll;
     	max-height: 45vh;
-    	padding-bottom: 40px;
+    	padding-bottom: 15px;
   	}
 		button, .button{
 			background-color: #4CAF50;
 	    border: none;
 	    color: white;
-	    padding: 15px 32px;
 	    text-align: center;
 	    text-decoration: none;
 	    display: inline-block;
 	    font-size: 16px;
 	    cursor: pointer;
 	    border-radius: 10px;
-	    margin: 10px;
+	    margin: 3px;
+	    width: 98%;
 		}
 		.button {
   		width: 90%;
@@ -59,10 +58,11 @@
 	    right: 0;
     }
 		.circle{
-    	font-size: 60px;
+    	line-height: 10px;
+	    font-size: 30px;
 	    border-radius: 50%;
-	    width: 100px;
-	    height: 100px;
+	    width: 50px;
+	    height: 50px;
 	    background: #6a92fd;
 	   }
 	  .queries{
@@ -76,14 +76,21 @@
 	    z-index: 1;
 	  }
 	  input{
-	  	padding: 12px 20px;
+	  	padding: 5px 5px;
    		border: 1px solid #ccc;
     	border-radius: 4px;
-    	display: block;
     	margin: auto;
 	  }
 	  ul{
-	  	padding: 0
+	  	padding: 0 !important;
+	  	margin: 0;
+	  }
+	  .close{
+	  	cursor: pointer;
+	  	position: absolute;
+    	right: 5px;
+    	top: 5px;
+    	font-size: 16px;
 	  }
 
 		}
@@ -91,9 +98,9 @@
 
 	<script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script> 
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
-	<script src="js/controllers/main.js"></script> 
+	<script src="js/controllers/main.js"></script>
 	<script src="js/services/vessels.js"></script> 
-	<script src="js/core.js"></script>
+	<script src="js/app.js"></script>
 
 </head>
 <body ng-controller="mainController">
@@ -101,6 +108,7 @@
 	<div my-map=""></div>
 
 	<div class ="popup" ng-show="vessel.info">
+		<div ng-click= "vessel.info=false" class="close">X</div>
 		
   	<form name="form" >
 		 	<ul ng-repeat="(key, val) in vessel.selectedVessleInfo"> 
